# online-course-completion-prediction

./: Model_training_(Final_File).ipynb  README.md  dataScaling.ipynb  data_preprocessing.ipynb  pyproject.toml  train_model.py
models/: model.pkl  scaler.pkl
notebooks/: Final_File.ipynb
