[project]
name = "ml-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "notebook (>=7.4.4,<8.0.0)",
    "ipykernel (>=6.30.0,<7.0.0)",
    "streamlit (>=1.47.1,<2.0.0)",
    "xgboost (>=3.0.2,<4.0.0)"
    
]

[tool.poetry]
packages = [{include = "ml_1", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
